--- a/ifts6/src/app/pages/contacto/contacto.component.html
+++ b/ifts6/src/app/pages/contacto/contacto.component.html
@@ -23,7 +23,7 @@
             <h2>Ubicación en Google Maps:</h2>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.562795248999!2d-58.368763799999996!3d-34.6152155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a33530840b7173%3A0x6c07abba27aab73e!2zSUZUUyBOwrA2!5e0!3m2!1ses-419!2sar!4v1696888812521!5m2!1ses-419!2sar"
-                width="500" height="450" style="border:0px;" allowfullscreen="" loading="lazy"
+                class="map" style="border:0px;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
