--- a/ifts6/src/app/components/footer/footer.component.html
+++ b/ifts6/src/app/components/footer/footer.component.html
@@ -29,7 +29,7 @@
     </div>
     <div class="footer-right">
       <p class="links">
-        <a href="https://www.argentina.gob.ar/educacion" target="_blank"><img src="assets/logo_mda.png" style="width: 140px; "></a>
+        <a href="https://www.argentina.gob.ar/educacion" target="_blank"><img src="assets/logo_mda.png" class="footer-logo-derecha"></a>
       </p>
     </div>
   </div>
