cambios en logos, header y footer

--- a/ifts6/src/app/components/footer/footer.component.html
+++ b/ifts6/src/app/components/footer/footer.component.html
@@ -29,8 +29,9 @@
     </div>
     <div class="footer-right">
       <p class="links">
-        <a href="https://www.argentina.gob.ar/educacion" target="_blank"><img src="assets/logo_mda.png" class="footer-logo-derecha"></a>
+        <a href="https://buenosaires.gob.ar/educacion" target="_blank"><img src="/assets/bac-header-2.png" class="footer-logo-derecha"></a>
       </p>
     </div>
+
   </div>
 </footer>
