--- a/ifts6/src/app/components/footer/footer.component.html
+++ b/ifts6/src/app/components/footer/footer.component.html
@@ -5,17 +5,18 @@
       <div class="footer-left ">
         <p class="links">
      <a href="https://www.facebook.com/CEIFTS6" target="_blank">
-        <img class="iconst" src="assets/faceNegro.png" alt="Facebook">
+        <img class="iconst" src="assets/f.png" alt="Facebook">
       </a>
       <a href="https://www.instagram.com/cde.ifts6/" target="_blank">
-        <img class="iconst" src="assets/instaNegro.png" alt="Instagram">
+        <img class="iconst" src="assets/ig.png" alt="Instagram">
       </a>
       <a href="https://www.whatsapp.com" target="_blank">
-        <img class="iconst" src="assets/whatNegro.png" alt="Whatsapp">
+        <img class="iconst" src="assets/w.png" alt="Whatsapp">
       </a>
       <a href="https://www.youtube.com/@ifts6459" target="_blank">
-        <img class="iconst" src="assets/ybNegro.png" alt="Youtube">
-      </a>
+        <img class="iconst" src="assets/y.png" alt="Youtube" > 
+    </a>
+    
         </p>
       </div>
 
@@ -29,7 +30,7 @@
     </div>
     <div class="footer-right">
       <p class="links">
-        <a href="https://buenosaires.gob.ar/educacion" target="_blank"><img src="/assets/bac-header-2.png" class="footer-logo-derecha"></a>
+        <a href="https://buenosaires.gob.ar/educacion" target="_blank"><img src="/assets/bac.png" class="footer-logo-derecha"></a>
       </p>
     </div>
 
