--- a/ifts6/src/app/components/header/header.component.css
+++ b/ifts6/src/app/components/header/header.component.css
@@ -12,12 +12,12 @@ header{
  }
 
  .header-logo-derecha{
-    width: 100px;
+    width: 70px;
 
  }
  .header-logo-izquierda{
-    width: 50px;
-    margin-top: 20px;
+    width: 200px;
+    margin-top: 10px;
  }
 .text-right {
     float: right;
@@ -57,6 +57,7 @@ header{
 }
 
 .titulo_instituto {
+    font-family: 'Open Sans', sans-serif; 
     font-weight: bold;
     margin-top: -35px;
     margin-left: 70px;
@@ -71,7 +72,7 @@ header{
     text-align: center;
     font-size: 40px;
     white-space: nowrap;
-
+    color: #212121; /* Establecer un color, en este caso, rojo (#FF0000) */
 }
 @media (min-width: 1200px) {
     .container {
