--- a/ifts6/src/app/components/header/header.component.html
+++ b/ifts6/src/app/components/header/header.component.html
@@ -3,14 +3,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-m-6 col-s-6 text-left oculto">
-                    <h5 class="sub-brand"><img src="assets/logo-otto.png" class="header-logo-izquierda"></h5>
-                    <div class="titulo_instituto">ITFS6</div>
+                    <h5 class="sub-brand"><img src="assets/ifts6.png" class="header-logo-izquierda"></h5>
+                    <!-- <div class="titulo_instituto">IFTS N° 6</div> -->
                 </div>
                     
                 <div class="titulo_web">Comercio Internacional y Aduanas</div>
                                 
                 <div class="col-m-6 col-s-6 text-right oculto">
-                    <h5 class="sub-brand"><img src="assets/logo2.png" class="header-logo-derecha"></h5>
+                    <h5 class="sub-brand"><img src="assets/bae.png" class="header-logo-derecha"></h5>
                 </div>
             </div>
         </div>
