--- a/ifts6/src/app/pages/admin/admin.component.css
+++ b/ifts6/src/app/pages/admin/admin.component.css
@@ -1,37 +1,54 @@
 @import "primeicons/primeicons.css";
 
-/*------------LOGIN-----------------------*/
-
+ 
+/* Estilos para el contenedor principal del formulario de inicio de sesión */
 .login {
-    height: 52.3vh;
     display: flex;
-}
-
-.login-cuadrado {
-    margin: 0 auto;
-    width: 25vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    text-align: center;
-}
-
-.login-texto {
-    margin-bottom: 10px;
-}
-
-.login-input {
-    padding: 3px;
-    margin: 10px;
+    align-items: center;
+    height: 80vh; 
+  }
+  
+  /* Estilos para el cuadro de inicio de sesión */
+  .login-cuadrado {
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 30px; /* Aumentamos el espacio interior para hacerlo más grande */
+    width: 350px; /* Aumentamos el ancho */
+  }
+  
+  /* Estilos para las etiquetas de texto y campos de entrada */
+  .login-texto {
+    display: block;
+    margin-bottom: 15px; /* Incrementamos el margen inferior */
+    font-weight: bold;
+  }
+  
+  .login-input {
+    width: 100%;
+    padding: 12px; /* Aumentamos el padding para hacerlo más grande */
+    border: 1px solid #ccc;
     border-radius: 4px;
-}
-
-.login-boton {
-    padding: 5px 10px;
-    border-radius: 10px;
+    font-size: 18px; /* Incrementamos el tamaño de fuente */
+  }
+  
+  /* Estilos para el botón de ingreso */
+  .login-boton {
+    background-color: #00b3e3;
+    color: #fff;
+    padding: 12px 25px; /* Aumentamos el padding del botón */
+    border: none;
+    border-radius: 4px;
+    font-size: 20px; /* Incrementamos el tamaño de fuente del botón */
     cursor: pointer;
-}
+    transition: background-color 0.3s;
+  }
+  
+  .login-boton:hover {
+    background-color: #0056b3;
+  }
+  
 
 /*------------ADMIN-----------------------*/
 
@@ -43,14 +60,26 @@
 .contenedor-botones {
     text-align: center;
     /* Centra los botones horizontalmente */
-    background-color: rgba(29, 161, 161, 0.818);
+    background-color:#18b596;
 }
 
 .btn {
-    margin: 5px;
-    /* Añade espacio entre los botones */
-    border-radius: 10px;
-    /* Radio de las esquinas (ajusta según tus preferencias) */
+  margin: 5px;
+  /* Añade espacio entre los botones */
+  border-radius: 10px;
+  /* Radio de las esquinas (ajusta según tus preferencias) */
+  background-color: #e5e5e5; /* Color de fondo del botón */
+  color: #1d1c1a; /* Color del texto en el botón */
+  padding: 10px 20px; /* Ajusta el espaciado interno del botón */
+  text-align: center;
+  font-size: 16px; /* Tamaño del texto */
+  cursor: pointer;
+  border: none; /* Elimina el borde del botón */
+  transition: background-color 0.3s; /* Efecto de cambio de color al pasar el cursor */
+}
+
+.btn:hover {
+  background-color: #87898b; /* Cambio de color al pasar el cursor sobre el botón */
 }
 
 /*------------ADMIN PUBLICACIONES-----------------------*/
@@ -71,9 +100,7 @@
     margin-top: 0.5rem;
 }
 
-.admin-publicaciones-texto {}
 
-.admin-publicaciones-input {}
 
 .admin-publicaciones-textarea {
     max-height: 5vh;
@@ -106,19 +133,33 @@
     margin: 1vh;
 }
 
-.admin-publicaciones-select {
 
-}
 
 .admin-publicaciones-botones{
     display: flex;
     align-items: end;
 }
+.admin-sectores{
+  display: grid;
+  grid-template-columns: 8% 25%;
+  max-height: 25vh;
 
-.admin-publicaciones-button{
-    width: 10vh;
-    height: 5vh;
-    padding: 1vh;
-    margin: 0 auto;
+}
+.admin-publicaciones-button {
+  width: 20vh;
+  height: 7vh;
+  padding: 1vh 2vh; /* Añadimos más espacio de relleno horizontal para hacer que el botón sea más atractivo */
+  margin: 0 auto;
+  background-color: #007bff; /* Color de fondo del botón */
+  color: #fff; /* Color del texto en el botón */
+  border: none; /* Eliminamos el borde predeterminado */
+  border-radius: 5px; /* Añadimos bordes redondeados */
+  cursor: pointer;
+  font-size: 15px;
+  transition: background-color 0.3s;
+}
+
+.admin-publicaciones-button:hover {
+  background-color: #0056b3; /* Cambio de color al pasar el cursor sobre el botón */
 }
 
