--- a/ifts6/src/app/components/header/header.component.css
+++ b/ifts6/src/app/components/header/header.component.css
@@ -1,82 +1,98 @@
-header{
+header {
     width: 100%;
+  }
+  
+  .fondo {
+  background-color: #FFD300;
+  padding: 20px 0; /* Ajusta el espacio vertical arriba y abajo */
+  max-width: 100%;
+  overflow: hidden;
+  min-height: 250px; /* Mantiene la altura mínima del fondo */
+  margin-bottom: -20px; /* Corrige el margen inferior */
 }
-
-.fondo {
-    background-color: #FFD300;
-}
-
-.container {
+  .container {
     width: 85%;
     margin: 0 auto;
- }
-
- .header-logo-derecha{
+  }
+  
+  .header-logo-derecha,
+  .header-logo-izquierda {
     width: 70px;
-
- }
- .header-logo-izquierda{
+    margin-top: 0; /* Elimina el margen superior en los logos */
+  }
+  
+  .header-logo-izquierda {
     width: 200px;
-    margin-top: 10px;
- }
-.text-right {
+  }
+  
+  .header-logo-derecha {
+    width: 70px;
+  }
+  
+  .text-right {
     float: right;
     text-align: right;
-}
-
-.text-left {
+  }
+  
+  .text-left {
     float: left;
     text-align: left;
-}
-
-.header {
+  }
+  
+  .header {
     position: relative;
     width: 100%;
-    height: 200px; /* Ajusta la altura del encabezado según tus necesidades */
-    background-color: #333; /*Cambia el color de fondo según tus preferencias */
-    text-align: center; /* Alinea el texto al centro del header */
-}  
-
-.imgifts6 {
+    height: 210px;
+    background-color: #333;
+    text-align: center;
+    display: flex; /* Agrega display: flex para alinear los elementos en el centro verticalmente */
+    justify-content: center; /* Centra horizontalmente los elementos */
+    align-items: center; /* Centra verticalmente los elementos */
+  }
+  
+  .imgifts6 {
     width: 100%;
     height: 100%;
-    object-fit: cover; /*Esto hará que la imagen ocupe todo el espacio del encabezado sin distorsionarla */
+    object-fit: cover;
+  
   }
-
-.contenedor-botones {
-    text-align: center; /* Centra los botones horizontalmente */
-     background-color:#1d1c1a;
-    
-}
-
-.btn {
-    margin: 5px; /* Añade espacio entre los botones */
- 
-    border-radius: 10px; /* Radio de las esquinas (ajusta según tus preferencias) */
-    
-}
-
-.titulo_instituto {
-    font-family: 'Open Sans', sans-serif; 
+  
+  .contenedor-botones {
+    text-align: center;
+    background-color: #1d1c1a;
+  }
+  
+  .btn {
+    margin: 5px;
+    border-radius: 10px;
+  }
+  
+  .titulo_instituto {
+    font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     margin-top: -35px;
     margin-left: 70px;
     float: left;
     text-align: left;
     font-size: 24px;
-
-}
-.titulo_web {
+  }
+  
+  .titulo_web {
     font-weight: bold;
-    margin-top: 20px;
-    text-align: center;
     font-size: 40px;
     white-space: nowrap;
-    color: #212121; /* Establecer un color, en este caso, rojo (#FF0000) */
-}
-@media (min-width: 1200px) {
+    color: #212121;
+    font-family: 'Open Sans', sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ 
+  }
+  
+  @media (min-width: 1200px) {
     .container {
-        width: 95%;
-        margin: 0 auto;
-     }
-}
+      width: 95%;
+      margin: 0 auto;
+    }
+  }
+  
