--- a/ifts6/src/app/components/header/header.component.html
+++ b/ifts6/src/app/components/header/header.component.html
@@ -1,4 +1,6 @@
 <header>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+
     <div class="fondo">
         <div class="container">
             <div class="row">
@@ -17,6 +19,7 @@
         <div class="header">
             <img class="imgifts6" src="assets/civil.png" alt="Imagen de encabezado">
         </div>
+        </div>
         <div class="contenedor-botones">
             <a (click)="irPagina('')"><button class="btn btn-custom">Inicio</button></a>
             <a (click)="irPagina('institucional')"><button class="btn btn-custom">Institucional</button></a>
@@ -27,5 +30,5 @@
             <a (click)="irPagina('contacto')"><button class="btn btn-custom">Contacto</button></a>
         </div>
 
-    </div>
+    
 </header>
