ARREGLO DE HORA J

--- a/ifts6/src/app/components/publicaciones/publicaciones.component.html
+++ b/ifts6/src/app/components/publicaciones/publicaciones.component.html
@@ -7,7 +7,7 @@
         </div>
         <h3><p>{{fila.descripcion}}</p></h3>
         <br>
-        <h3><label for="">Fecha de publicación: {{fila.fecha_Publicacion | date:'d/M/yyyy'}}</label></h3>
+        <h3><label for="">Fecha de publicación: {{fila.fecha_Publicacion | date:'dd-MM-YY'}}</label></h3>
         <br>
         <!-- <h3><label for="">Publicado por: {{convertirUsuario(fila.id_Usuario)}}</label></h3>
         <br>
