--- a/ifts6/src/app/pages/inicio/inicio.component.html
+++ b/ifts6/src/app/pages/inicio/inicio.component.html
@@ -1,1 +1,1 @@
-<app-publicaciones [criterio]="criterioPag"></app-publicaciones>
+<app-publicaciones [criterio]="criterioPag" [cantidad]="6"></app-publicaciones>
